# text_processing_util_mds24

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat  origin_of_species.txt
src/text_processing_util_mds24/: __init__.py  text_processing_util_mds24.py
tests/: test_text_processing_util_mds24.py
